--- a/src/main/docs/guide/installation/installHomebrew.adoc
+++ b/src/main/docs/guide/installation/installHomebrew.adoc
@@ -2,12 +2,14 @@ In order to install Micronaut, run following command:
 
 [source,bash]
 ----
-$ brew install --cask micronaut-projects/tap/micronaut
+$ brew install micronaut
 ----
 
 You can find more information about Homebrew usage on their https://brew.sh/[homepage].
 
 You should now be able to run the Micronaut CLI.
+
+TIP: If you're getting a warning that `“mn” cannot be opened because the developer cannot be verified.`, click the Apple menu, and select*System Settings*. Then browse to *Privacy & Security*, and scroll down to the *Security* section. There should be a warning that `"mn" was blocked`, with an *Allow Anyway* button. Clicking this button will fix the issue.
 
 [source,bash]
 ----
