--- a/src/main/docs/guide/installation/installFromSource.adoc
+++ b/src/main/docs/guide/installation/installFromSource.adoc
@@ -5,7 +5,6 @@ Clone the repository as follows:
 $ git clone https://github.com/micronaut-projects/micronaut-starter.git
 ----
 
-
 `cd` into the `micronaut-starter` directory and run the following command:
 
 [source,bash]
@@ -15,7 +14,8 @@ $ ./gradlew micronaut-cli:assembleDist
 
 This will create a zip distribution of the CLI (named with the current version) in the `starter-cli/build/distributions/` folder.
 
-You'll need to unzip this somewhere convenient. For example, to unzip it to a dot directory in your user home, you could do:
+You'll need to unzip this somewhere convenient.
+For example, to unzip it to a dot directory in your user home, you could do:
 
 [source,bash]
 ----
@@ -32,8 +32,7 @@ export MICRONAUT_HOME=~/path/to/unzipped/cli
 export PATH="$PATH:$MICRONAUT_HOME/bin"
 ----
 
-TIP: If you're using SDKMAN and don't want to mess with your $MICRONAUT_HOME, you can also point SDKMAN to your
-local installation for dev purposes by using `sdk install micronaut dev path/to/unzipped/cli`
+TIP: If you're using SDKMAN! and don't want to mess with your $MICRONAUT_HOME, you can also point SDKMAN! to your local installation for dev purposes by using `sdk install micronaut dev path/to/unzipped/cli`
 
 Reload your terminal or `source` your shell profile with `source`:
 
@@ -42,7 +41,7 @@ Reload your terminal or `source` your shell profile with `source`:
 $ source ~/.bash_profile
 ----
 
-You are now be able to run the Micronaut CLI.
+You are now able to run the Micronaut CLI.
 
 [source,bash]
 ----
