--- a/src/main/docs/guide/starterImpls/starterNetty.adoc
+++ b/src/main/docs/guide/starterImpls/starterNetty.adoc
@@ -4,9 +4,10 @@ The subproject `starter-web-netty` provides an implementation that runs on Netty
 
 From the project root:
 
-```cmd
+[source,cmd]
+----
 ./gradlew clean starter-web-netty:run
-```
+----
 
 And visit http://localhost:8080/application-types
 
@@ -22,9 +23,10 @@ http://localhost:8080/swagger/views/rapidoc/index.html
 
 You can build the WAR file with:
 
-```cmd
+[source,cmd]
+----
 ./gradlew clean starter-web-netty:shadowJar
-```
+----
 
 A runnable JAR file will be located in `starter-web-servlet/build/libs`:
 
